Ajustes de Copyright

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
         </section>
     </main>
     <footer class="theme-bg-primary py-5 text-light">
-        <section class="container">
+        <section class="container mb-5">
             <div class="row">
                 <div class="col-12 col-md-3 text-center">
                     <img src="inc/img/acjf.png" alt="" class="mb-3">
@@ -321,6 +321,11 @@
                         </li>
                     </ul>
                 </div>
+            </div>
+        </section>
+        <section class="container">
+            <div class="copyright text-center">
+                <small><b>Aeroclube de Juiz de Fora</b> | Copyright © 2023 - Todos os direitos reservados.</small> <small>Desenvolvido por <a href="https://maisaqui.com.br/"><b>Mais Aqui</b></a></small>
             </div>
         </section>
     </footer>
