Página de leilão

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                             </div>
                             <p>Termina em <span class="text-success"><b>7 dias</b> e <b>8 horas</b></span></p>
                             <p>Conclusão: <span class="text-success"><b>04/01/2024</b> às <b>18:40</b></span></p>
-                            <a href="#" class="btn theme-btn-primary btn-sm w-100">Ver leilão</a>
+                            <a href="item.html" class="btn theme-btn-primary btn-sm w-100">Ver leilão</a>
                         </div>
                     </div>
 
@@ -161,7 +161,7 @@
                             </div>
                             <p>Termina em <span class="text-danger"><b>2 dias</b> e <b>8 horas</b></span></p>
                             <p>Conclusão: <span class="text-danger"><b>30/12/2023</b> às <b>18:40</b></span></p>
-                            <a href="#" class="btn theme-btn-primary btn-sm w-100">Ver leilão</a>
+                            <a href="item.html" class="btn theme-btn-primary btn-sm w-100">Ver leilão</a>
                         </div>
                     </div>
 
@@ -177,7 +177,7 @@
                             </div>
                             <p>Termina em <span class="text-success"><b>7 dias</b> e <b>8 horas</b></span></p>
                             <p>Conclusão: <span class="text-success"><b>04/01/2024</b> às <b>18:40</b></span></p>
-                            <a href="#" class="btn theme-btn-primary btn-sm w-100">Ver leilão</a>
+                            <a href="item.html" class="btn theme-btn-primary btn-sm w-100">Ver leilão</a>
                         </div>
                     </div>
 
@@ -193,7 +193,7 @@
                             </div>
                             <p>Termina em <span class="text-success"><b>7 dias</b> e <b>8 horas</b></span></p>
                             <p>Conclusão: <span class="text-success"><b>04/01/2024</b> às <b>18:40</b></span></p>
-                            <a href="#" class="btn theme-btn-primary btn-sm w-100">Ver leilão</a>
+                            <a href="item.html" class="btn theme-btn-primary btn-sm w-100">Ver leilão</a>
                         </div>
                     </div>
 
@@ -209,7 +209,7 @@
                             </div>
                             <p>Termina em <span class="text-success"><b>7 dias</b> e <b>8 horas</b></span></p>
                             <p>Conclusão: <span class="text-success"><b>04/01/2024</b> às <b>18:40</b></span></p>
-                            <a href="#" class="btn theme-btn-primary btn-sm w-100">Ver leilão</a>
+                            <a href="item.html" class="btn theme-btn-primary btn-sm w-100">Ver leilão</a>
                         </div>
                     </div>
 
@@ -225,7 +225,7 @@
                             </div>
                             <p>Termina em <span class="text-success"><b>7 dias</b> e <b>8 horas</b></span></p>
                             <p>Conclusão: <span class="text-success"><b>04/01/2024</b> às <b>18:40</b></span></p>
-                            <a href="#" class="btn theme-btn-primary btn-sm w-100">Ver leilão</a>
+                            <a href="item.html" class="btn theme-btn-primary btn-sm w-100">Ver leilão</a>
                         </div>
                     </div>
 
@@ -241,7 +241,7 @@
                             </div>
                             <p>Termina em <span class="text-success"><b>7 dias</b> e <b>8 horas</b></span></p>
                             <p>Conclusão: <span class="text-success"><b>04/01/2024</b> às <b>18:40</b></span></p>
-                            <a href="#" class="btn theme-btn-primary btn-sm w-100">Ver leilão</a>
+                            <a href="item.html" class="btn theme-btn-primary btn-sm w-100">Ver leilão</a>
                         </div>
                     </div>
 
@@ -257,7 +257,7 @@
                             </div>
                             <p>Termina em <span class="text-success"><b>7 dias</b> e <b>8 horas</b></span></p>
                             <p>Conclusão: <span class="text-success"><b>04/01/2024</b> às <b>18:40</b></span></p>
-                            <a href="#" class="btn theme-btn-primary btn-sm w-100">Ver leilão</a>
+                            <a href="item.html" class="btn theme-btn-primary btn-sm w-100">Ver leilão</a>
                         </div>
                     </div>
                 </div>
