Revisões na página inicial

--- a/tutorial.html
+++ b/tutorial.html
@@ -73,134 +73,17 @@
                 <div class="row py-5">
                     <div class="col-12 col-md-8">
                         <div class="banner-page-content">
-                            <h2>Repasse 5622.11.2023</h2>
-                            <ul>
-                                <li><i class="fa-solid fa-file-lines"></i> <b>Contrato:</b> Repasse 5622.11.2023</li>
-                                <li><i class="fa-solid fa-clock"></i> Termina em <span class="text-success"><b>7
-                                            dias</b> e <b>8 horas</b></span></li>
-                                <li><i class="fa-solid fa-calendar"></i> <b>Conclusão:</b> <span
-                                        class="text-success"><b>04/01/2024</b> às <b>18:40</b></span></li>
-                            </ul>
+                            <h2>Entenda como funciona</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent eu feugiat elit. Duis dapibus lorem nec nisi feugiat consequat. Aenean ac eros ut tortor consectetur pharetra. Vivamus luctus sit amet elit id imperdiet.</p>
                         </div>
                     </div>
                     <div class="col-12 col-md-4">
-                        <div class="banner-page-sidebar">
-                            <div class="banner-page-item-cover p-1 bg-light rounded text-center">
-                                <img src="inc/img/contrato.jpg" alt="" class="img-fluid rounded mb-2">
-                                <div class="input-group mb-1">
-                                    <select class="form-select" id="lance">
-                                        <option value="" selected>1.400,00</option>
-                                        <option value="">1.500,00</option>
-                                        <option value="">1.600,00</option>
-                                        <option value="">1.700,00</option>
-                                        <option value="">1.800,00</option>
-                                        <option value="">1.900,00</option>
-                                        <option value="">2.000,00</option>
-                                        <option value="">2.100,00</option>
-                                        <option value="">2.200,00</option>
-                                        <option value="">2.300,00</option>
-                                    </select>
-                                </div>
-                                <a href="#" class="btn btn-success w-100"><i class="fa-solid fa-gavel"></i> Dar meu
-                                    lance</a>
-                                <p class="text-danger mt-2">
-                                    <small><i class="fa-solid fa-triangle-exclamation"></i>Você precisa estar logado
-                                        para
-                                        dar lances!</small>
-                                </p>
-                                <p>Com o valor de lance <b>R$1.500,00</b>, o valor da hora é de <b>R$150,00.</b></p>
-                                <hr>
-                                <p class="text-muted"><small><b>Obs:</b> Valores acima do valor mínimo de lance entrarão
-                                        como valor de
-                                        reserva para lances automáticos.</small></p>
-                            </div>
-                        </div>
                     </div>
                 </div>
             </div>
             <div class="banner-page-overlay"></div>
         </section>
-        <section class="pre-page bg-light">
-            <div class="container">
-                <div class="row py-5">
-                    <div class="col-12 col-md-8">
-                        <div class="page-cards d-flex justify-content-between mb-4">
-                            <div class="followers">
-                                <a href="#" class="badge theme-bg-primary me-2">Seguir</a><small class="text-muted"><i
-                                        class="fa-solid fa-eye"></i> 8 seguidores</small>
-                            </div>
-                            <div class="payment">
-
-                            </div>
-                        </div>
-                        <div class="row mb-4">
-                            <div class="col-md-6">
-                                <h3><i class="fa-solid fa-gavel"></i> Lance atual</h3>
-                                <p class="display-6 text-muted mb-0">Sem lances</p>
-                                <button type="button" class="btn btn-link p-0" data-bs-toggle="modal"
-                                    data-bs-target="#exampleModal">Ver lances (0)</button>
-                            </div>
-                            <div class="col-md-6">
-                                <p>Ao realizar este lance você tem uma economia de
-                                    <b class="text-success">R$3.500,00 (70% OFF )</b> sobre o preço atual do
-                                    pacote.
-                                </p>
-                                <p><b>Preço atual: <s class="text-danger">R$5000,00</s></b></p>
-                            </div>
-                        </div>
-                        <div class="card-store card border-0">
-                            <div class="card-body">
-                                <h5><b>L ACJF Store</b></h5>
-                                <p>Você também pode adquirir o pacote, comprando direto da loja.</p>
-                                <h6><b>Métodos de pagamento</b></h6>
-                                <ul>
-                                    <li><i class="fa-brands fa-pix"></i> Pix</li>
-                                    <li><i class="fa-solid fa-credit-card"></i> Cartão</li>
-                                </ul>
-                                <div class="display-6 mb-3">R$3.000,00</div>
-                                <a href="#" class="btn theme-btn-primary px-4"><i class="fa-solid fa-cart-shopping"></i>
-                                    Comprar</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section class="page-content">
-            <div class="container">
-                <div class="row py-5">
-                    <div class="col-12">
-                        <h3>Descrição do leilão</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ullamcorper mauris sit amet
-                            leo pellentesque, sit amet porttitor metus pretium. Nam tincidunt nunc velit, sed aliquam
-                            sapien maximus ut. Mauris tempus quam at nisi suscipit, vel tristique lacus commodo. Donec
-                            vitae nisi et neque ultricies imperdiet. Mauris eu elementum diam, sed eleifend orci. Cras
-                            eget vulputate augue, vitae faucibus arcu. Morbi in hendrerit tellus. Sed vel consequat
-                            augue.</p>
-                        <p>Praesent aliquet massa varius felis posuere, a eleifend neque tempor. Phasellus ultricies
-                            vehicula auctor. Suspendisse egestas interdum ex at sollicitudin. Curabitur vel enim
-                            lacinia, malesuada dui vitae, finibus dui. Morbi rutrum mauris arcu, vel efficitur ipsum
-                            gravida at. Integer tincidunt, nisl quis lobortis efficitur, tellus elit pharetra purus, ac
-                            ultricies ex turpis quis tortor. Duis at ex lectus. Praesent ac placerat tellus.</p>
-                        <p>Sed suscipit ut enim ac auctor. Sed id nisi luctus, luctus leo id, porttitor eros. Nulla et
-                            accumsan velit. Suspendisse sem dui, interdum id auctor eget, eleifend eget sapien. Donec
-                            sit amet risus lorem. Fusce nec ante tincidunt, iaculis felis in, semper leo. Nulla sit amet
-                            laoreet orci. Vivamus massa arcu, mattis consectetur ligula at, placerat pellentesque nibh.
-                            Suspendisse sem justo, interdum non nisi sit amet, tempor maximus quam. Sed efficitur massa
-                            et commodo suscipit. Nullam fermentum est non auctor tincidunt. Quisque congue accumsan
-                            velit, et tempor libero suscipit ac. Suspendisse venenatis magna nec diam pellentesque
-                            pretium. Maecenas quam risus, congue id consequat quis, lobortis sit amet eros. Nullam
-                            cursus tempus dictum. Class aptent taciti sociosqu ad litora torquent per conubia nostra,
-                            per inceptos himenaeos.</p>
-                        <p>Praesent semper odio a dolor vulputate, quis eleifend libero semper. Pellentesque viverra
-                            tempus massa, eget vulputate turpis tristique sit amet. Vestibulum commodo et justo nec
-                            tincidunt. Fusce feugiat tristique mi vel blandit. Praesent at nibh nibh. Fusce laoreet
-                            pellentesque purus, nec scelerisque ante venenatis nec. Nulla eu augue id nulla consectetur
-                            tempus.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
+        
     </main>
 
     <!-- Modal -->
