--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 
     <!-- Fontawesome -->
     <link rel="stylesheet" href="inc/libs/fontawesome-free-6.2.1-web/css/all.min.css">
+
+    <!-- Venobox -->
+    <link rel="stylesheet" href="inc/libs/VenoBox-master/dist/venobox.min.css">
 </head>
 
 <body>
@@ -35,6 +38,9 @@
                         </li>
                         <li class="nav-item ms-3">
                             <a class="nav-link active" href="#">Leilões</a>
+                        </li>
+                        <li class="nav-item ms-3">
+                            <a class="nav-link active" href="/tutorial.html">Entenda como funciona</a>
                         </li>
                         <li class="nav-item ms-3">
                             <a class="nav-link" href="#">Contato</a>
@@ -114,6 +120,22 @@
         </section>
 
         <!-- Content -->
+        <section class="bg-video">
+            <div class="container">
+                <div class="row justify-content-center py-5">
+                    <div class="col-12 col-md-6">
+                        <h3 class="text-center mb-4"><b>Como funciona:</b></h3>
+                        <a class="venobox youtube-video" data-autoplay="true" data-vbtype="video"
+                            href="https://www.youtube.com/watch?v=BZAN-i_o8nA&t=5s">
+                            <i class="fa fa-play"></i>
+                            <div class="youtube-video-overlay rounded"></div>
+                            <img class="rounded" src="inc/img/leilao-aeroclube-de-juiz-de-fora.jpg" alt="">
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <section class="bg-light py-5">
             <div class="container">
                 <div class="row">
@@ -127,29 +149,54 @@
                                 </span>
                             </div>
                         </div>
-                        <h2 class="title-page text-center mb-5">Leilões ativos</h2>
+                        <h2 class="title-page text-center mb-5">Leilões disponíveis</h2>
                     </div>
                 </div>
                 <div class="items-list">
 
-                    <!-- Item card -->
+                    <!-- Item card: leilão -->
                     <div class="product-item card border-0 shadow-sm">
+                        <div class="type-item bg-success text-center text-light"><small>Leilão</small></div>
                         <div class="product-item-img">
+                            <span class="badge bg-danger d-none">Últimos dias</span>
                             <div class="product-item-img-overlay"></div>
                             <img src="inc/img/contrato.jpg" class="card-img-top" alt="...">
                         </div>
                         <div class="card-body text-center">
                             <div class="product-item-title rounded shadow p-2">
-                                <h5>Repasse 5622.11.2023</h5>
+                                <h5>Título do leilão</h5>
                             </div>
-                            <p>Termina em <span class="text-success"><b>7 dias</b> e <b>8 horas</b></span></p>
-                            <p>Conclusão: <span class="text-success"><b>04/01/2024</b> às <b>18:40</b></span></p>
-                            <a href="item.html" class="btn theme-btn-primary btn-sm w-100">Ver leilão</a>
+                            <p class="text-muted"><small>RJ - Campo Grande</small></p>
+                            <p class="mb-0">Termina em <span class="text-success"><b>7d, 8h, 54s</b></span></p>
+                            <p class="text-muted"><small>04/01/2024 às 18:40</small></p>
+                            <p><small>Próximo lance:</small><br> <b>R$4.000,00</b></p>
+                            <a href="item.html" class="btn btn-success btn-sm w-100">Ver leilão</a>
                         </div>
                     </div>
 
-                    <!-- Item card -->
+                    <!-- Item card: venda -->
                     <div class="product-item card border-0 shadow-sm">
+                        <div class="type-item theme-bg-primary text-center text-light"><small>Venda</small></div>
+                        <div class="product-item-img">
+                            <span class="badge bg-danger d-none">Últimos dias</span>
+                            <div class="product-item-img-overlay"></div>
+                            <img src="inc/img/contrato.jpg" class="card-img-top" alt="...">
+                        </div>
+                        <div class="card-body text-center">
+                            <div class="product-item-title rounded shadow p-2">
+                                <h5>Título do anúncio</h5>
+                            </div>
+                            <p class="text-muted"><small>MG - Juiz de Fora</small></p>
+                            <p class="mb-0">Válido até</p>
+                            <p class="text-muted"><small>04/01/2024 às 18:40</small></p>
+                            <p><small>Preço:</small><br> <b>R$4.000,00</b></p>
+                            <a href="item.html" class="btn theme-btn-primary btn-sm w-100">Ver anúncio</a>
+                        </div>
+                    </div>
+
+                    <!-- Item card: leilão - últimos dias -->
+                    <div class="product-item card border-0 shadow-sm">
+                        <div class="type-item bg-success text-center text-light"><small>Leilão</small></div>
                         <div class="product-item-img">
                             <span class="badge bg-danger">Últimos dias</span>
                             <div class="product-item-img-overlay"></div>
@@ -157,109 +204,116 @@
                         </div>
                         <div class="card-body text-center">
                             <div class="product-item-title rounded shadow p-2">
-                                <h5>Repasse 5622.11.2023</h5>
+                                <h5>Título do leilão</h5>
                             </div>
-                            <p>Termina em <span class="text-danger"><b>2 dias</b> e <b>8 horas</b></span></p>
-                            <p>Conclusão: <span class="text-danger"><b>30/12/2023</b> às <b>18:40</b></span></p>
-                            <a href="item.html" class="btn theme-btn-primary btn-sm w-100">Ver leilão</a>
+                            <p class="text-muted"><small>RJ - Campo Grande</small></p>
+                            <p class="mb-0">Termina em <span class="text-danger"><b>7d, 8h, 54s</b></span></p>
+                            <p class="text-muted"><small>04/01/2024 às 18:40</small></p>
+                            <p><small>Próximo lance:</small><br> <b>R$4.000,00</b></p>
+                            <a href="item.html" class="btn btn-success btn-sm w-100">Ver leilão</a>
                         </div>
                     </div>
 
-                    <!-- Item card -->
+                    <!-- Item card: leilão -->
                     <div class="product-item card border-0 shadow-sm">
+                        <div class="type-item bg-success text-center text-light"><small>Leilão</small></div>
                         <div class="product-item-img">
+                            <span class="badge bg-danger d-none">Últimos dias</span>
                             <div class="product-item-img-overlay"></div>
                             <img src="inc/img/contrato.jpg" class="card-img-top" alt="...">
                         </div>
                         <div class="card-body text-center">
                             <div class="product-item-title rounded shadow p-2">
-                                <h5>Repasse 5622.11.2023</h5>
+                                <h5>Título do leilão</h5>
                             </div>
-                            <p>Termina em <span class="text-success"><b>7 dias</b> e <b>8 horas</b></span></p>
-                            <p>Conclusão: <span class="text-success"><b>04/01/2024</b> às <b>18:40</b></span></p>
-                            <a href="item.html" class="btn theme-btn-primary btn-sm w-100">Ver leilão</a>
+                            <p class="text-muted"><small>RJ - Campo Grande</small></p>
+                            <p class="mb-0">Termina em <span class="text-success"><b>7d, 8h, 54s</b></span></p>
+                            <p class="text-muted"><small>04/01/2024 às 18:40</small></p>
+                            <p><small>Próximo lance:</small><br> <b>R$4.000,00</b></p>
+                            <a href="item.html" class="btn btn-success btn-sm w-100">Ver leilão</a>
                         </div>
                     </div>
 
-                    <!-- Item card -->
+                    <!-- Item card: venda -->
                     <div class="product-item card border-0 shadow-sm">
+                        <div class="type-item theme-bg-primary text-center text-light"><small>Venda</small></div>
                         <div class="product-item-img">
+                            <span class="badge bg-danger d-none">Últimos dias</span>
                             <div class="product-item-img-overlay"></div>
                             <img src="inc/img/contrato.jpg" class="card-img-top" alt="...">
                         </div>
                         <div class="card-body text-center">
                             <div class="product-item-title rounded shadow p-2">
-                                <h5>Repasse 5622.11.2023</h5>
+                                <h5>Título do anúncio</h5>
                             </div>
-                            <p>Termina em <span class="text-success"><b>7 dias</b> e <b>8 horas</b></span></p>
-                            <p>Conclusão: <span class="text-success"><b>04/01/2024</b> às <b>18:40</b></span></p>
-                            <a href="item.html" class="btn theme-btn-primary btn-sm w-100">Ver leilão</a>
+                            <p class="text-muted"><small>MG - Juiz de Fora</small></p>
+                            <p class="mb-0">Válido até</p>
+                            <p class="text-muted"><small>04/01/2024 às 18:40</small></p>
+                            <p><small>Preço:</small><br> <b>R$4.000,00</b></p>
+                            <a href="item.html" class="btn theme-btn-primary btn-sm w-100">Ver anúncio</a>
                         </div>
                     </div>
 
-                    <!-- Item card -->
+                    <!-- Item card: leilão -->
                     <div class="product-item card border-0 shadow-sm">
+                        <div class="type-item bg-success text-center text-light"><small>Leilão</small></div>
                         <div class="product-item-img">
+                            <span class="badge bg-danger d-none">Últimos dias</span>
                             <div class="product-item-img-overlay"></div>
                             <img src="inc/img/contrato.jpg" class="card-img-top" alt="...">
                         </div>
                         <div class="card-body text-center">
                             <div class="product-item-title rounded shadow p-2">
-                                <h5>Repasse 5622.11.2023</h5>
+                                <h5>Título do leilão</h5>
                             </div>
-                            <p>Termina em <span class="text-success"><b>7 dias</b> e <b>8 horas</b></span></p>
-                            <p>Conclusão: <span class="text-success"><b>04/01/2024</b> às <b>18:40</b></span></p>
-                            <a href="item.html" class="btn theme-btn-primary btn-sm w-100">Ver leilão</a>
+                            <p class="text-muted"><small>RJ - Campo Grande</small></p>
+                            <p class="mb-0">Termina em <span class="text-success"><b>7d, 8h, 54s</b></span></p>
+                            <p class="text-muted"><small>04/01/2024 às 18:40</small></p>
+                            <p><small>Próximo lance:</small><br> <b>R$4.000,00</b></p>
+                            <a href="item.html" class="btn btn-success btn-sm w-100">Ver leilão</a>
                         </div>
                     </div>
 
-                    <!-- Item card -->
+                    <!-- Item card: venda -->
                     <div class="product-item card border-0 shadow-sm">
+                        <div class="type-item theme-bg-primary text-center text-light"><small>Venda</small></div>
                         <div class="product-item-img">
+                            <span class="badge bg-danger d-none">Últimos dias</span>
                             <div class="product-item-img-overlay"></div>
                             <img src="inc/img/contrato.jpg" class="card-img-top" alt="...">
                         </div>
                         <div class="card-body text-center">
                             <div class="product-item-title rounded shadow p-2">
-                                <h5>Repasse 5622.11.2023</h5>
+                                <h5>Título do anúncio</h5>
                             </div>
-                            <p>Termina em <span class="text-success"><b>7 dias</b> e <b>8 horas</b></span></p>
-                            <p>Conclusão: <span class="text-success"><b>04/01/2024</b> às <b>18:40</b></span></p>
-                            <a href="item.html" class="btn theme-btn-primary btn-sm w-100">Ver leilão</a>
+                            <p class="text-muted"><small>MG - Juiz de Fora</small></p>
+                            <p class="mb-0">Válido até</p>
+                            <p class="text-muted"><small>04/01/2024 às 18:40</small></p>
+                            <p><small>Preço:</small><br> <b>R$4.000,00</b></p>
+                            <a href="item.html" class="btn theme-btn-primary btn-sm w-100">Ver anúncio</a>
                         </div>
                     </div>
 
-                    <!-- Item card -->
+                    <!-- Item card: leilão -->
                     <div class="product-item card border-0 shadow-sm">
+                        <div class="type-item bg-success text-center text-light"><small>Leilão</small></div>
                         <div class="product-item-img">
+                            <span class="badge bg-danger d-none">Últimos dias</span>
                             <div class="product-item-img-overlay"></div>
                             <img src="inc/img/contrato.jpg" class="card-img-top" alt="...">
                         </div>
                         <div class="card-body text-center">
                             <div class="product-item-title rounded shadow p-2">
-                                <h5>Repasse 5622.11.2023</h5>
+                                <h5>Título do leilão</h5>
                             </div>
-                            <p>Termina em <span class="text-success"><b>7 dias</b> e <b>8 horas</b></span></p>
-                            <p>Conclusão: <span class="text-success"><b>04/01/2024</b> às <b>18:40</b></span></p>
-                            <a href="item.html" class="btn theme-btn-primary btn-sm w-100">Ver leilão</a>
+                            <p class="text-muted"><small>RJ - Campo Grande</small></p>
+                            <p class="mb-0">Termina em <span class="text-success"><b>7d, 8h, 54s</b></span></p>
+                            <p class="text-muted"><small>04/01/2024 às 18:40</small></p>
+                            <p><small>Próximo lance:</small><br> <b>R$4.000,00</b></p>
+                            <a href="item.html" class="btn btn-success btn-sm w-100">Ver leilão</a>
                         </div>
                     </div>
 
-                    <!-- Item card -->
-                    <div class="product-item card border-0 shadow-sm">
-                        <div class="product-item-img">
-                            <div class="product-item-img-overlay"></div>
-                            <img src="inc/img/contrato.jpg" class="card-img-top" alt="...">
-                        </div>
-                        <div class="card-body text-center">
-                            <div class="product-item-title rounded shadow p-2">
-                                <h5>Repasse 5622.11.2023</h5>
-                            </div>
-                            <p>Termina em <span class="text-success"><b>7 dias</b> e <b>8 horas</b></span></p>
-                            <p>Conclusão: <span class="text-success"><b>04/01/2024</b> às <b>18:40</b></span></p>
-                            <a href="item.html" class="btn theme-btn-primary btn-sm w-100">Ver leilão</a>
-                        </div>
-                    </div>
                 </div>
             </div>
         </section>
@@ -325,11 +379,22 @@
         </section>
         <section class="container">
             <div class="copyright text-center">
-                <small><b>Aeroclube de Juiz de Fora</b> | Copyright © 2023 - Todos os direitos reservados.</small> <small>Desenvolvido por <a href="https://maisaqui.com.br/"><b>Mais Aqui</b></a></small>
+                <small><b>Aeroclube de Juiz de Fora</b> | Copyright © 2023 - Todos os direitos reservados.</small>
+                <small>Desenvolvido por <a href="https://maisaqui.com.br/"><b>Mais Aqui</b></a></small>
             </div>
         </section>
     </footer>
     <script src="inc/libs/bootstrap-5.3.1-dist/js/bootstrap.bundle.min.js"></script>
+    <script src="inc/libs/VenoBox-master/dist/venobox.min.js"></script>
+    <script>
+        new VenoBox({
+            selector: '.venobox',
+            numeration: true,
+            infinigall: true,
+            share: true,
+            spinner: 'rotating-plane'
+        });
+    </script>
 </body>
 
 </html>
